--- a/Gaming-Assistant/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Gaming-Assistant/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,34 +3,21 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/profile"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:title="@string/profile" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/friends"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="@string/friends" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/categories"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="@string/categories" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/search"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="@string/search" />
     </group>
-
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
 
 </menu>
