--- a/Gaming-Assistant/app/src/main/res/layout/fragment_friend_list.xml
+++ b/Gaming-Assistant/app/src/main/res/layout/fragment_friend_list.xml
@@ -1,13 +1,18 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.by.lomakin.gaming_assistant.ui.fragments.FriendListFragment">
 
-    <TextView
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/friends_frame"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content">
+        <ListView
+        android:id="@+id/friends_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/friends" />
+        android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
-</FrameLayout>
+</LinearLayout>
