Added friend list loading

--- a/Gaming-Assistant/app/src/main/res/layout/fragment_friend_list.xml
+++ b/Gaming-Assistant/app/src/main/res/layout/fragment_friend_list.xml
@@ -3,7 +3,22 @@
 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.by.lomakin.gaming_assistant.ui.fragments.FriendListFragment">
+
+    <ProgressBar
+        android:id="@+id/progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
+    <TextView
+        android:id="@+id/empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/empty"
+        android:visibility="gone"
+        android:layout_gravity="center" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/friends_frame"
@@ -14,5 +29,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
     </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </LinearLayout>
