--- a/Gaming-Assistant/app/src/main/res/layout/activity_profile.xml
+++ b/Gaming-Assistant/app/src/main/res/layout/activity_profile.xml
@@ -7,12 +7,11 @@
     android:orientation="vertical"
     tools:context="com.by.lomakin.gaming_assistant.ui.GameInfoActivity">
 
-    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <android.support.design.widget.CoordinatorLayout
         android:id="@+id/coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="false">
+        android:fitsSystemWindows="true">
 
         <include layout="@layout/profile_info" />
 
@@ -37,7 +36,7 @@
                 android:id="@+id/toolbar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fitsSystemWindows="false"
+                android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
                 app:expandedTitleMarginEnd="64dp"
                 app:expandedTitleMarginStart="48dp"
