--- a/Gaming-Assistant/app/src/main/res/layout/activity_categories.xml
+++ b/Gaming-Assistant/app/src/main/res/layout/activity_categories.xml
@@ -1,31 +1,31 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.by.lomakin.gaming_assistant.ui.fragments.FriendListFragment">
+    tools:context="com.by.lomakin.gaming_assistant.ui.CategoriesActivity">
 
     <ProgressBar
         android:id="@+id/progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        />
 
     <TextView
         android:id="@+id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:text="@string/empty"
-        android:visibility="gone"
-        android:layout_gravity="center" />
+        android:visibility="gone" />
 
-    <android.support.v4.widget.SwipeRefreshLayout
-        android:id="@+id/friends_frame"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content">
-        <ListView
-        android:id="@+id/friends_list"
+    <ListView
+        android:id="@+id/category_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-    </android.support.v4.widget.SwipeRefreshLayout>
+        android:layout_height="match_parent" />
+
+
+
 </LinearLayout>
