--- a/Gaming-Assistant/app/src/main/res/layout/item_category.xml
+++ b/Gaming-Assistant/app/src/main/res/layout/item_category.xml
@@ -12,6 +12,16 @@
     <TextView
         android:id="@+id/category_name"
         android:layout_gravity="center_vertical"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
+
+    <ImageButton
+        android:id="@+id/image_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="0"
+        android:background="@android:drawable/ic_delete"
+        android:visibility="invisible"
+        />
 </LinearLayout>
