--- a/Gaming-Assistant/app/src/main/res/layout/item_game.xml
+++ b/Gaming-Assistant/app/src/main/res/layout/item_game.xml
@@ -13,11 +13,23 @@
         android:layout_height="54dp"
         android:scaleType="centerCrop"
         android:id="@+id/game_image"
-        android:layout_marginRight="8dip" />
+        android:layout_marginRight="8dip"
+        />
 
     <TextView
         android:id="@+id/game_name"
         android:layout_gravity="center_vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_weight="1"/>
+
+    <ImageButton
+        android:id="@+id/image_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="0"
+        android:background="@android:drawable/ic_delete"
+        android:visibility="gone"
+        />
 </LinearLayout>
