--- a/Gaming-Assistant/app/src/main/res/menu/activity_main_drawer.xml
+++ b/Gaming-Assistant/app/src/main/res/menu/activity_main_drawer.xml
@@ -20,4 +20,11 @@
             android:title="@string/search" />
     </group>
 
+    <group>
+        <item
+            android:id="@+id/sign_out"
+            android:icon="@drawable/ic_exit_to_app"
+            android:title="@string/sign_out" />
+    </group>
+
 </menu>
